--- a/web/app/customer/customer-list.html
+++ b/web/app/customer/customer-list.html
@@ -18,7 +18,7 @@
                     <thead>
                       <tr>
                         <th colspan="3">&nbsp;</th>
-                        <th>
+                        <th class="pull-right">
                           <input ng-model="itemsByPage" id="items" class="input-sm"  form-control ng-valid ng-dirty ng-valid-number type="number"/>
                         </th>
                       </tr>
